lab5/ingress/hw-ingress-path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress-path
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: path.hw.med
    http:
      paths:
      - pathType: Exact
        path: /hello
        backend:
          service:
            name: hello-svc
            port:
              number: 8081
  - host: path.hw.med
    http:
      paths:
      - path: /world
        pathType: Exact
        backend:
          service:
            name: world-svc
            port:
              number: 8082
  - http:
      paths:
      - path: "/hello/*"
        pathType: Prefix
        backend:
          service:
            name: world-svc
            port:
              number: 8082
