lab5/ingress/hw-ingress-subdomain.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress-subdomain
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.hw.med
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: hello-svc
            port:
              number: 8081
  - host: world.hw.med
    http:
      paths:
      - path: /world
        pathType: Exact
        backend:
          service:
            name: world-svc
            port:
              number: 8082
